# python-selve-new

./: .gitignore  CHANGELOG.md  FINAL_STATUS_REPORT.md  QUICKSTART.md  README.md  README_SETUP_DE.md  TEST_RESULTS.md  coverage_xdist_example.txt  debug_async.py  debug_exact.py  debug_response.py  debug_source.py  debug_test.bat  debug_test.py  diagnose_hardware.py  direct_hardware_test.bat  direct_hardware_test.py  full_test_report.txt  generate_coverage.bat  package.sh  pyproject.toml  pytest.ini  release.py  run_all_tests.bat  run_hardware_tests.bat  run_integration_tests.bat  run_mock_tests.bat  run_single_test.bat  run_single_test.py  run_tests.bat  run_tests.py  setup.bat  setup.py  setup_and_test.bat  setup_and_test.py  setup_and_test_de.py  simple_port_test.py  stress_test_report.txt  test.py  test_com16.py  (+9 more)
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: python-publish.yml  tests.yml
selve/: __init__.py  command.py  commeo.py  device.py  event.py  group.py  iveo.py  param.py  senSim.py  sender.py  sensor.py  service.py
selve/commands/: command.py  device.py  event.py  firmware.py  group.py  iveo.py  param.py  senSim.py  sender.py  sensor.py  service.py
selve/util/: __init__.py  errors.py  protocol.py  serial_transport.py
tests/: README.md  README_DE.md  __init__.py  conftest.py  requirements.txt  test_import.py  test_replacement.py  test_selve_advanced.py  test_selve_hardware.py  test_selve_integration.py  test_selve_structure.py  test_selve_unit.py
tests/integration/: README.md  conftest.py  test_device_integration.py  test_selve_gateway_integration.py  test_selve_hardware.py  test_selve_integration.py
tests/unit/: mock_utils.py  test_command_coverage.py  test_commands.py  test_device.py  test_device_classes_coverage.py  test_device_commands_extended.py  test_gateway_configuration_issues.py  (+25 more)
